syntax = "proto3"

package go.micro.srv.consignment;

services ShippingService {
  // 托送一批货物
  rpc CreateConsignment (Consignment) returns (Response) {
  }

  // 查看所有托运货物的信息
  rpc GetConsignmants (GetRequest) returns (Response) {
  }
}

message Consignment {
  string id = 1;
  string description = 2;
  int32 weight = 3;
  repeated Container containers = 4;
  string vessel_id = 5
}

message Container {
  string id = 1;
  string customer_id = 2;
  string origin = 3;
  string user_id = 4;
}

message Response {
  bool created = 1;
  Consignment consignmet = 2;
  repeated Consignment consignments = 3;
}

message GetRequest{
}


