syntax = "proto3";

package go.micro.srv.vessel;

service VesselService {
  rpc FindAvailable (Specification) returns (Response) {
  }
}

// 货轮
message Vessel {
  string id = 1;
  int32 capacity = 2;
  int32 max_weight = 3;
  string name = 4;
  bool available = 5;
  string ower_id = 6;
}


// 等待运送的货物
message Specification {
  int32 capacity = 1;
  int32 max_weight = 2;
}

// 返回所有能符合运送货物条件的货轮的信息
message Response {
  Vessel vessel = 1;
  repeated Vessel vessels = 2;
}




